# quickstart-universe

./: .gitignore  README.md  blog_post.md  pyproject.toml  qsu  qsu.py
.github/workflows/: ci.yml  publish.yml
app/: main.py
app/services/: content_extractor.py
app/services/prompts/: gemini_extract_prompt.txt
app/templates/: .gitkeep  index.html
docs/: enhancing_qsu_with_gemini_ai.md  how_i_built_qsu_with_jules.md
tests/: test_qsu.py
